# SanktaOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_gitlab.md  book.toml
.github/workflows/: ci.yml  docs-deployment.yml  mirror-to-gitlab.yml
crates/device/: Cargo.toml
crates/device/src/: driver.rs  irq.rs  lib.rs  ops.rs
crates/device/src/block/: mod.rs  ram_disk.rs
crates/device/src/console/: mod.rs
crates/device/src/net/: mod.rs  net_device.rs  null_net.rs
crates/device/src/rtc/: mod.rs
crates/device/src/serial/: mod.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs  ops.rs
crates/fs/src/ext4/: adapters.rs  inode.rs  mod.rs
crates/fs/src/proc/: inode.rs  mod.rs  proc.rs
crates/fs/src/proc/generators/: cpuinfo.rs  meminfo.rs  mounts.rs  psmem.rs  uptime.rs
crates/fs/src/proc/generators/process/: cmdline.rs  maps.rs  mod.rs  stat.rs  status.rs
crates/fs/src/sysfs/: device_registry.rs  inode.rs  mod.rs  sysfs.rs
crates/fs/src/sysfs/builders/: block.rs  devices.rs  input.rs  kernel.rs  net.rs  rtc.rs  tty.rs
crates/fs/src/tmpfs/: inode.rs  mod.rs  tmpfs.rs
crates/klog/: Cargo.toml
crates/mm/: Cargo.toml
crates/mm/src/: arch_ops.rs  config.rs  file.rs  frame_allocator.rs  lib.rs
crates/mm/src/address/: mod.rs  operations.rs  page_num.rs  types.rs
crates/mm/src/memory_space/: mapping_area.rs  mmap_file.rs  mod.rs  space.rs
crates/mm/src/page_table/: mod.rs  page_table_entry.rs  table.rs
crates/net/: Cargo.toml
crates/net/src/: config.rs  interface.rs  lib.rs  ops.rs  socket.rs
crates/sync/: Cargo.toml
crates/sync/src/: intr_guard.rs  lib.rs  preempt.rs  raw_spin_lock.rs  raw_spin_lock_without_guard.rs  rwlock.rs  spin_lock.rs  ticket_lock.rs
crates/uapi/: Cargo.toml
crates/uapi/src/: fs.rs  futex.rs  ioctl.rs  lib.rs  log.rs  resource.rs  sched.rs  signal.rs  sysinfo.rs  time.rs  types.rs  uts_namespace.rs
crates/vfs/: Cargo.toml
docs/: README.md  SUMMARY.md  api.md  book.toml
docs/devices/: README.md
docs/fs/: README.md  api_reference.md
docs/ipc/: README.md
docs/log/: README.md  architecture.md
docs/mm/: README.md  architecture.md
docs/net/: README.md  netperf.md
docs/scripts/: README.md  rewrite_links.md  style-check.md
docs/sync/: README.md  api_reference.md  design.md
docs/syscall/: README.md
docs/vfs/: README.md  devno.md  filelock_and_devices.md
document/: README.md  SUMMARY.md
document/fs/: README.md
document/ipc/: shared_memory.md
document/mm/: api_reference.md
document/net/: network_implementation_guide.md
document/scripts/: README.md  rewrite_links.md
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: config.rs  linker.ld  loongarch_linker.ld  main.rs  oscomp.rs  time_ext.rs
os/src/arch/: mod.rs
os/src/arch/loongarch/: mod.rs  selftest.rs  timer.rs
os/src/arch/loongarch/boot/: mod.rs
os/src/arch/loongarch/mm/: mod.rs  page_table.rs  page_table_entry.rs
os/src/arch/loongarch/platform/: mod.rs
os/src/arch/loongarch/syscall/: mod.rs
os/src/arch/loongarch/trap/: trap_frame.rs  trap_handler.rs
os/src/arch/riscv/: ipi.rs  timer.rs
os/src/arch/riscv/boot/: entry.S  mod.rs
os/src/arch/riscv/kernel/: task.rs
os/src/arch/riscv/mm/: mod.rs  page_table.rs  page_table_entry.rs
os/src/arch/riscv/platform/: virt.rs
os/src/arch/riscv/syscall/: mod.rs
os/src/arch/riscv/trap/: mod.rs  sum_guard.rs  trap_entry.S  trap_frame.rs  trap_handler.rs
os/src/device/: device_tree.rs  mod.rs  ops_impl.rs  virtio_hal.rs
os/src/device/block/: mod.rs  virtio_blk.rs
os/src/device/bus/: virtio_mmio.rs
os/src/device/console/: mod.rs
os/src/device/irq/: mod.rs  plic.rs
os/src/device/net/: mod.rs  net_device.rs
os/src/device/rtc/: mod.rs
os/src/device/serial/: mod.rs
os/src/device/tests/: ram_disk.rs
os/src/fs/: mod.rs  ops_impl.rs  simple_fs.rs
os/src/fs/ext4/: inode.rs
os/src/fs/proc/: inode.rs
os/src/fs/proc/generators/process/: cmdline.rs  maps.rs  memory.rs
os/src/fs/sysfs/: device_registry.rs  inode.rs
os/src/fs/tests/ext4/: ext4_basic.rs  ext4_directory.rs  ext4_error.rs  ext4_integration.rs  ext4_io.rs  ext4_metadata.rs  ext4_permissions.rs  ext4_rename.rs  mod.rs
os/src/fs/tests/proc/: proc_basic.rs  proc_directory.rs  proc_dynamic_file.rs  proc_integration.rs  proc_symlink.rs
os/src/fs/tests/sysfs/: sysfs_attribute.rs  sysfs_basic.rs  sysfs_builders.rs  sysfs_device_registry.rs  sysfs_hierarchy.rs  sysfs_integration.rs  sysfs_symlink.rs
os/src/fs/tests/tmpfs/: tmpfs_basic.rs  tmpfs_capacity.rs  tmpfs_directory.rs  tmpfs_error.rs  tmpfs_integration.rs  tmpfs_io.rs  tmpfs_metadata.rs  tmpfs_sparse.rs
os/src/fs/tmpfs/: inode.rs
os/src/ipc/: message.rs  mod.rs  pipe.rs  shared_memory.rs  signal.rs
os/src/kernel/: cpu.rs  time.rs  timer.rs
os/src/kernel/scheduler/: mod.rs  rr_scheduler.rs  task_queue.rs
os/src/kernel/syscall/: cred.rs  fcntl.rs  fs.rs  io.rs  ioctl.rs  ipc.rs  mm.rs  mod.rs  network.rs  signal.rs  sys.rs  task.rs  util.rs
os/src/kernel/task/: cred.rs  exec_loader.rs  futex.rs  ktask.rs  mod.rs  task_manager.rs  task_struct.rs  tid_allocator.rs  work_queue.rs
os/src/log/: mod.rs
os/src/log/tests/: basic.rs  byte_counting.rs  filter.rs  format.rs  mod.rs  overflow.rs  peek.rs
os/src/mm/: memory_space.rs  mod.rs
os/src/mm/frame_allocator/: mod.rs
os/src/mm/global_allocator/: global_allocator.rs
os/src/mm/memory_space/: mapping_area.rs  memory_space.rs  mmap_file.rs
os/src/net/: config.rs  interface.rs  mod.rs  socket.rs
os/src/sync/: mod.rs  mutex.rs  per_cpu.rs
os/src/test/: assert.rs  macros.rs  mod.rs  net_test.rs
os/src/vfs/: adapter.rs  fd_table.rs  file.rs  file_lock.rs  inode.rs  mm_bridge.rs  mod.rs  ops_impl.rs
os/src/vfs/impls/: char_dev_file.rs  stdio_file.rs
os/src/vfs/tests/: blk_dev_file.rs  char_dev_file.rs  dentry.rs  devno.rs  fd_table.rs  file.rs  mod.rs  mount.rs  path.rs  pipe.rs  stdio.rs  trait_file.rs
scripts/: convert_os_test_case.py  rewrite_links.py  run_all_tests.py  style-check.sh
test-support/: Cargo.toml
(+66 files in other folders)
