[package]
name = "sync"
version.workspace = true
edition.workspace = true

[dependencies]
lock_api = "0.4"

# sync 暂时放宽文档要求
[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
