[package]
name = "uapi"
version.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }

# uapi 暂时放宽文档要求，后续逐步补齐
[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
