[package]
name = "uapi"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"

# uapi 暂时放宽文档要求，后续逐步补齐
[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
